--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword="duqdgml00"
-keyPassword="qudgml00"
+storePassword=qudgml00
+keyPassword=qudgml00
 keyAlias=key
-storeFile="../keystore/key.jks"
+storeFile=../keystore/key.jks
