--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_naver_login: ^1.2.4
   url_launcher: ^6.0.20
   youtube_player_flutter: ^8.0.0
+  rive: ^0.8.4
+  flutter_spinkit: ^5.1.0
+  animated_text_kit: ^4.2.1
+  toggle_switch: ^2.0.1
+  google_fonts: ^2.3.2
 
 
 dependency_overrides:
@@ -51,6 +56,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - google_fonts/
     - assets/images/default.png
     - assets/images/defaultDark.png
     - assets/images/model.png
+    - assets/images/metaIcon.png
